updating index file

--- a/index.html
+++ b/index.html
@@ -62,14 +62,20 @@
         </div>
 
         <div class="container">
-            <div class="col-lg-4">
+            <div class="col-lg-4 col-md-6 col-sm-6">
                 <div class="card">
-                    <div class="card-body bg-info">
+                    <div class="card-body bg-dark">
+                        <h5 class="d-md-none">Pinterest Clone</h5>
+                        <h2 class="d-none d-md-block">Pinterest Clone</h2>
+                        <div class="overlay d-none d-sm-flex">
+                            <button type="button" class="btn btn-dark btn-sm" data-toggle="modal" data-target="#myModal"> <i class="fa fa-search"></i> <span>Checkout</span> </button>
+                            <button onclick="window.location.href='https://github.com/Hashir-Umar/Pinterest-Clone'" type="button" class="btn btn-dark btn-sm"> <i class="fa fa-github"></i> <span>Source Code</span> </button>
+                        </div>
                     </div>
-                    <div class="card-footer">
+                    <div class="card-footer d-sm-none">
                         <button style="border-radius: 50%;" type="button" class="btn btn-info btn-sm" data-toggle="modal" data-target="#myModal"> <i class="fa fa-search"></i> </button>
                         <span>Checkout</span>
-                        <button style="border-radius: 50%;" type="button" class="btn btn-info btn-sm"> <i class="fa fa-github"></i> </button>
+                        <button onclick="window.location.href='https://github.com/Hashir-Umar/Pinterest-Clone'" style="border-radius: 50%;" type="button" class="btn btn-info btn-sm"> <i class="fa fa-github"></i> </button>
                         <span>Source Code</span>
                     </div>
                 </div>
@@ -140,8 +146,26 @@
             <hr class="custom-line bg-dark" />
         </div>
 
-        <div class="container bg-dark">
-
+        <div class="container rounded bg-dark">
+            <div class="row">
+                <div class="container d-flex justify-content-around align-items-center">
+                    <div class="col-md-4 col-sm-6">
+                        <p class="text-center">I'm currently under graduate in Computer Sciences at University of Central Punjab.</p>
+                    </div>
+                    <div class="col-md-4 col-sm-6 text-center">
+                            <span>Programmer</span>     <br />
+                            <span>Web Developer</span>  <br />
+                            <span>Android Geek</span>   <br />
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="text-center">
+                        <span class="text-secondary">Email: </span> hashirumar19@gmail.com
+                     </p>
+                </div>
+            </div>
         </div>
 
     </section>
@@ -194,15 +218,15 @@
                 <div class="col-md-4">
                     <div class="py-4 web-links text-center">
                         <h4 class="text-white">ARROUND THE WEB</h4>
-                        <button class="btn"> <i class="fa fa-google-plus-square"></i> </button>
-                        <button class="btn"> <i class="fa fa-facebook-square"></i> </button>
-                        <button class="btn"> <i class="fa fa-instagram"></i> </button>
-                        <button class="btn"> <i class="fa fa-github"></i> </button>
+                        <button onclick="window.location.href='https://www.instagram.com/hashir.umer/'" class="btn"> <i class="fa fa-google"></i> </button>
+                        <button onclick="window.location.href='https://web.facebook.com/HashirUmer.11'" class="btn"> <i class="fa fa-facebook-square"></i> </button>
+                        <button onclick="window.location.href='https://www.instagram.com/hashir.umer/'" class="btn"> <i class="fa fa-instagram"></i> </button>
+                        <button onclick="window.location.href='https://www.github.com/hashir-umar'" class="btn"> <i class="fa fa-github"></i> </button>
                     </div>
                 </div>
             </div>
         </div>
-            <p class="py-4 text-center m-0">Copyright &copy 2018</p>
+            <p class="py-4 text-center m-0">Copyright &copy 2018 | Hashir Umar</p>
         </footer>
 
 
